--- a/installations/templates/installations/daily_schedule.html
+++ b/installations/templates/installations/daily_schedule.html
@@ -396,8 +396,8 @@
                             <td>{{ installation.order.customer.phone }}</td>
                             <td>{{ installation.order.salesperson.name|default:"غير محدد" }}</td>
                             <td>
-                                {% if installation.order.windows_count %}
-                                    {{ installation.order.windows_count }}
+                                {% if installation.windows_count %}
+                                    {{ installation.windows_count }}
                                 {% else %}
                                     <span class="text-muted">غير محدد</span>
                                 {% endif %}
