--- a/installations/templates/installations/edit_schedule.html
+++ b/installations/templates/installations/edit_schedule.html
@@ -79,11 +79,11 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="{{ form.status.id_for_label }}">الحالة:</label>
-                                    {{ form.status }}
-                                    {% if form.status.errors %}
+                                    <label for="{{ form.location_type.id_for_label }}">نوع المكان:</label>
+                                    {{ form.location_type }}
+                                    {% if form.location_type.errors %}
                                         <div class="text-danger">
-                                            {% for error in form.status.errors %}
+                                            {% for error in form.location_type.errors %}
                                                 <small>{{ error }}</small>
                                             {% endfor %}
                                         </div>
@@ -91,7 +91,24 @@
                                 </div>
                             </div>
                         </div>
-                        
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="{{ form.windows_count.id_for_label }}">عدد الشبابيك:</label>
+                                    {{ form.windows_count }}
+                                    {% if form.windows_count.errors %}
+                                        <div class="text-danger">
+                                            {% for error in form.windows_count.errors %}
+                                                <small>{{ error }}</small>
+                                            {% endfor %}
+                                        </div>
+                                    {% endif %}
+                                    <small class="form-text text-muted">{{ form.windows_count.help_text }}</small>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="form-group">
                             <label for="{{ form.notes.id_for_label }}">ملاحظات:</label>
                             {{ form.notes }}
