--- a/templates/base.html
+++ b/templates/base.html
@@ -196,7 +196,26 @@
 
                     <!-- الأقسام للمستخدمين المسجلين فقط -->
                     {% if user.is_authenticated %}
-                        {% if user.is_staff %}
+                        {% if user.is_warehouse_staff %}
+                            <!-- موظفو المستودع يرون نظام التقطيع والمستودع المخصص فقط -->
+                            <li class="nav-item">
+                                <a class="nav-link" href="/cutting/">
+                                    <i class="fas fa-cut"></i><span class="nav-text">نظام التقطيع</span>
+                                </a>
+                            </li>
+                            {% if user.assigned_warehouse %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="/cutting/orders/warehouse/{{ user.assigned_warehouse.id }}/">
+                                    <i class="fas fa-warehouse"></i><span class="nav-text">{{ user.assigned_warehouse.name }}</span>
+                                </a>
+                            </li>
+                            {% endif %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="/cutting/orders/completed/">
+                                    <i class="fas fa-list-check"></i><span class="nav-text">أوامر التقطيع المجمعة</span>
+                                </a>
+                            </li>
+                        {% elif user.is_staff %}
                             <!-- الموظفون يرون جميع الأقسام -->                            <li class="nav-item">
                                 <a class="nav-link" href="/customers/">
                                     <i class="fas fa-users"></i><span class="nav-text">العملاء</span>
@@ -218,6 +237,9 @@
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="/cutting/">
                                         <i class="fas fa-cut"></i> نظام التقطيع
+                                    </a></li>
+                                    <li><a class="dropdown-item" href="/cutting/orders/completed/">
+                                        <i class="fas fa-list-check"></i> أوامر التقطيع المجمعة
                                     </a></li>
                                     <li><a class="dropdown-item" href="/cutting/reports/">
                                         <i class="fas fa-chart-bar"></i> تقارير التقطيع
